--- a/src/Components/Sass/styles.scss
+++ b/src/Components/Sass/styles.scss
@@ -9,6 +9,7 @@
 @import '../Home/fourthcontainersonhome';
 
 @import '../Navbar/navbar';
+@import '../Footer/footer';
 
 @import '../BodyStyles/bodystyles';
 
