--- a/src/Components/Login/Register/_empleado.scss
+++ b/src/Components/Login/Register/_empleado.scss
@@ -1,4 +1,5 @@
 .containerFormEmpleado{
+    background-color: #f8f9fa;
     display: flex;
     justify-content: space-around;
     align-items: center;
