--- a/src/Components/Jobs/_firstsectionjobs.scss
+++ b/src/Components/Jobs/_firstsectionjobs.scss
@@ -1,8 +1,11 @@
 .conteinerFirstSectionJobs{
-    width: 80%;
+    width: 100%;
     border: 2px solid red;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 20px;
+    .firstSectionJobs{
+        width: 80%;
+    }
 }
