--- a/src/Components/Jobs/_jobs.scss
+++ b/src/Components/Jobs/_jobs.scss
@@ -1,8 +1,25 @@
-.conteinerJobs{
+.containerJobs{
     display: flex;
-    margin: 0;
-    padding: 0;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    width: 100%;
+    .containerImgJobs{
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        display: flex;
+        flex-direction: column;
+        margin: 2rem 0 4rem 0;
+        .imgJobs{
+            display: flex;
+            width: 80%;
+            background-image: url('../../assets/pexels-krakograff-textures-124842124-20560363.jpg');
+            background-position: center;
+            background-size: contain;
+            border-radius: 8px;
+            height: 200px;
+        }
+    }
 }
