--- a/src/Components/Login/StylesLogin/_personaldata.scss
+++ b/src/Components/Login/StylesLogin/_personaldata.scss
@@ -2,24 +2,41 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    background-image: url(../../../assets/pexels-krakograff-textures-124842124-20560363.jpg);
+    background-position: center;
+    background-size: cover;
     .firstArticlePersonalData{
-        border: none;
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
+        height: 28.75rem;
     }
     .containerSectionsPersonalData{
         justify-content: center;
-        gap: 40px;
         display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        padding: 2.25rem;
+        gap: 2.5rem ;
         .firstSectionPersonalData{
             display: flex;
             flex-direction: column;
+            justify-content: space-around;
             }
         .secondSectionPersonalData{
             display: flex;
             flex-direction: column;
+            width: 50%;
+
+            justify-content: space-around;
+            p{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                text-align: center;
+            }
         }
     }
     .containerPhoneSigninPersonalData{
