add styles general

--- a/src/Components/Home/_fourthcontainersonhome.scss
+++ b/src/Components/Home/_fourthcontainersonhome.scss
@@ -3,6 +3,7 @@
     width: 94%;
     gap: 1rem;
     margin-top: 10rem;
+    margin-bottom: 10rem;
     padding: 1rem;
     .stackContainerPrincipalFourthContainerSonHome{
         display: flex;
