--- a/src/Components/Courses/_courses.scss
+++ b/src/Components/Courses/_courses.scss
@@ -11,7 +11,7 @@
         gap: 10px;
         display: flex;
         flex-direction: column;
-        margin: 2rem 0 4rem 0;
+        margin: 5rem 0 7rem 0;
         .secondItemInfoCourses{
             display: flex;
             width: 60%;
@@ -22,6 +22,7 @@
             width: 80%;
             background-image: url('../../assets/pexels-krakograff-textures-124842124-20560363.jpg');
             background-position: center;
+            margin: 4rem 0;
             background-size: contain;
             border-radius: 8px;
             height: 200px;
@@ -35,7 +36,7 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-
+    margin-bottom: 4rem;
     .containerListItems {
         width: 50%;
     }
