--- a/src/Components/Jobs/_jobs.scss
+++ b/src/Components/Jobs/_jobs.scss
@@ -11,7 +11,7 @@
         gap: 10px;
         display: flex;
         flex-direction: column;
-        margin: 2rem 0 4rem 0;
+        margin: 4rem 1rem 4rem 1rem;
         .imgJobs{
             display: flex;
             width: 80%;
@@ -21,5 +21,12 @@
             border-radius: 8px;
             height: 200px;
         }
+    }
+    .containerJobsList{
+        margin: 10rem 0;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 }
