--- a/src/Components/Jobs/_jobslist.scss
+++ b/src/Components/Jobs/_jobslist.scss
@@ -1,12 +1,35 @@
-.containerJobsList{
+.containerMapJobs{
+    padding: 4rem;
     display: flex;
-    width: 60%;
-    justify-content: center;
-    align-items: center;
-    gap: 40px;
-    flex-wrap: wrap;
+    gap: 4rem;
     .cardJobs {
-display: flex;
-flex-direction: column;
-    }
-    }
+        width: 80%;
+    
+        border-radius: 8px;
+        background: #f5f5f5;
+        position: relative;
+        padding: 1.8rem;
+        border: 2px solid #c3c6ce;
+        transition: 0.5s ease-out;
+        overflow: visible;
+        
+        &:hover {
+            border-color: rgb(134, 134, 134);
+            box-shadow: 10px 5px 18px 0 rgba(255, 255, 255, 0.877);
+        
+            // .card-button {
+            // transform: translate(-50%, 50%);
+            // opacity: 1;
+            // }
+        }
+        }
+        
+        .card-details {
+        color: black;
+        height: 100%;
+        gap: .5em;
+        display: grid;
+        place-content: center;
+        font-family: 'Courier New', Courier, monospace;
+        }
+}
