--- a/src/Components/Login/StylesLogin/_profile.scss
+++ b/src/Components/Login/StylesLogin/_profile.scss
@@ -1,18 +1,14 @@
 .conteinerPrincipalProfile{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
-    height: 13rem;
-    .sectionOneProfile{
-        h1{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        a{
-            text-decoration: none;
-            color: black;
-        }
+    height: 37.5rem;
+    width: 100%;
+    .conteinerSectionsProfile{
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        height: 100%;
     }
 }
