--- a/src/Components/Landing/_sectiononelanding.scss
+++ b/src/Components/Landing/_sectiononelanding.scss
@@ -13,11 +13,10 @@
     }
     .articleTitleLanding{
         font-size: 22px;
-
         display: flex;
         color: black;
-        h1{
-          margin: 0;
+        img{
+          width: 10rem;
         }
     }
     .articleParrafoLanding{
