--- a/src/Components/Courses/_courses.scss
+++ b/src/Components/Courses/_courses.scss
@@ -1,4 +1,15 @@
+@keyframes fadeIn {
+    0% {
+        opacity: 0.2;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
 .containerCourses {
+    animation: fadeIn 0.3s ease-in-out;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -11,7 +22,7 @@
         gap: 10px;
         display: flex;
         flex-direction: column;
-        margin: 5rem 0 7rem 0;
+        margin: 3rem 0 7rem 0;
         .secondItemInfoCourses{
             display: flex;
             width: 60%;
