--- a/src/Components/Landing/_landing.scss
+++ b/src/Components/Landing/_landing.scss
@@ -1,6 +1,15 @@
+@keyframes fadeIn {
+    0% {
+        opacity: 0.2;
+    }
 
+    100% {
+        opacity: 1;
+    }
+}
 
 .principalConteinerLanding{
+    animation: fadeIn 0.3s ease-in-out;
     height: 100vh;
     display: flex;
     flex-direction: column;
