--- a/src/Components/Login/Register/_articlefirstempleado.scss
+++ b/src/Components/Login/Register/_articlefirstempleado.scss
@@ -4,4 +4,8 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+                // Aplicar estilos solo cuando la pantalla es menor que 768px
+                @media (max-width: 500px) {
+                    flex-direction: column;
+                }
 }
