--- a/src/Components/Login/Register/_empleado.scss
+++ b/src/Components/Login/Register/_empleado.scss
@@ -1,4 +1,15 @@
-.sectionConteinerFormEmpleado{
+@keyframes fadeIn {
+    0% {
+        opacity: 0.2;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+.sectionConteinerFormEmpleado {
+    animation: fadeIn 0.3s ease-in-out;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -7,8 +18,13 @@
     background-image: url('../../../assets/pexels-krakograff-textures-124842124-20560363.jpg');
     background-position: center;
     background-size: cover;
-    padding: 12px;
-    .containerFormEmpleado{
+    padding: 5.4rem;
+                    // Aplicar estilos solo cuando la pantalla es menor que 768px
+                    @media (max-width: 500px) {
+                        width: 80%;
+                    }
+
+    .containerFormEmpleado {
         gap: 40px;
         display: flex;
         justify-content: space-around;
@@ -17,16 +33,24 @@
         text-align: center;
         margin-top: 2rem;
         width: 80%;
-        button{
+
+        button {
             margin-top: 1rem;
         }
-        .firstSectionEmpleado{
+
+        .firstSectionEmpleado {
             display: flex;
             flex-direction: row;
             flex-wrap: wrap;
             width: 66%;
+
+            // Aplicar estilos solo cuando la pantalla es menor que 768px
+            @media (max-width: 500px) {
+                width: 100%;
+            }
         }
-        .prueba{
+
+        .prueba {
             display: flex;
             width: 100%;
             flex-direction: column;
