--- a/src/Components/Login/StylesLogin/_profile.scss
+++ b/src/Components/Login/StylesLogin/_profile.scss
@@ -1,3 +1,13 @@
+@keyframes fadeIn {
+    0% {
+        opacity: 0.2;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
 .conteinerPrincipalProfile{
     display: flex;
     flex-direction: row;
@@ -5,8 +15,11 @@
     align-items: center;
     height: 37.5rem;
     width: 100%;
+    padding-top: 1rem;
+    animation: fadeIn 0.3s ease-in-out;
     .conteinerSectionsProfile{
         display: flex;
+        padding: 1rem;
         flex-direction: row;
         width: 100%;
         height: 100%;
