--- a/src/Components/Login/StylesLogin/_sectiononeprofile.scss
+++ b/src/Components/Login/StylesLogin/_sectiononeprofile.scss
@@ -1,66 +1,67 @@
-.sectionOneProfile{
-    border: 1px solid blue;
+.sectionOneProfile {
     width: 70%;
     flex-direction: column;
     display: flex;
-    .firstContainerSectionOneProfile{
-        background-color: lightcoral;
+    padding: 0.4rem;
+    height: 33.125rem;
+    .firstContainerSectionOneProfile {
         width: 100%;
         height: 12rem;
         display: flex;
         justify-content: flex-end;
         align-items: flex-start;
-        }
-        .secondContainerSectionOneProfile{
-            border: 1px solid green;
-            width: 50%;
-            .conteinerInfoUserProfile{
-                .firstArticleConteinerInfoUserProfile{
-                    .sectionFirstArticleConteinerInfoUserProfile{
-                        border: 1px solid black;
-                        padding: 0.2rem;
-                        display: flex;
-                        justify-content: space-around;
-                    }
-                    .sectionSecondArticleConteinerInfoUserProfile{
-                        border: 1px solid black;
-                        padding: 0.2rem;
+        background-image: url("https://plus.unsplash.com/premium_photo-1661962648855-b97a8e025e0e?q=80&w=1332&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
 
-                        .containerUbicationAndButtonContactInformation{
-                            display: flex;
-                            border: 1px solid red;
-                        }
-                    }
-                    .sectionThirdArticleConteinerInfoUserProfile{
-                        border: 1px solid black;
-                        padding: 0.2rem;
-
+    .secondContainerSectionOneProfile {
+        width: 90%;
+        .conteinerInfoUserProfile {
+            .firstArticleConteinerInfoUserProfile {
+                .sectionFirstArticleConteinerInfoUserProfile {
+                    padding: 0.2rem;
+                    align-items: center;
+                    display: flex;
+                    justify-content: space-around;
+                }
+                .sectionSecondArticleConteinerInfoUserProfile {
+                    padding: 0.2rem;
+                    .containerUbicationAndButtonContactInformation {
                         display: flex;
-                        justify-content: space-around;
                     }
                 }
-            }
-        }
-        .ThirdConteinerSectionOneProfile{
-            border: 1px solid orangered;
-            .firstArticleThirdConteinerSectionOneProfile{
-                display: flex;
-                flex-direction: row;
-                justify-content: center;
-                .firstSectionFirstArticleThirdConteinerSectionOneProfile{
-                    border: 1px solid red;
+                .sectionThirdArticleConteinerInfoUserProfile {
                     padding: 0.2rem;
                     display: flex;
-                    flex-direction: column;
-                    width: 50%;
-                }
-                .secondSectionFirstArticleThirdConteinerSectionOneProfile{
-                    border: 1px solid red;
-                    padding: 0.2rem;
-
-                    width: 50%;
-
+                    justify-content: space-around;
+                    a{
+                        color: #1976D2;
+                        text-decoration: none;
+                    }
                 }
             }
         }
+    }
+
+    .ThirdConteinerSectionOneProfile {
+        .firstArticleThirdConteinerSectionOneProfile {
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+            gap: 2rem;
+            .firstSectionFirstArticleThirdConteinerSectionOneProfile {
+                padding: 0.2rem;
+                display: flex;
+                flex-direction: column;
+                width: 50%;
+            }
+
+            .secondSectionFirstArticleThirdConteinerSectionOneProfile {
+                padding: 0.2rem;
+                width: 50%;
+            }
+        }
+    }
 }
