--- a/src/Components/Login/StylesLogin/_sectionsecondprofile.scss
+++ b/src/Components/Login/StylesLogin/_sectionsecondprofile.scss
@@ -1,5 +1,34 @@
 .sectionSecondProfile{
     display: flex;
+    flex-direction: column;
     width: 30%;
-    border: 1px solid blue;
+    height: 33.125rem;
+    padding: 0.4rem;
+    .firstSectionSecondSectionProfile{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        p{
+            margin-bottom: 1.2rem;
+        }
+        .conteinerEditLanguageProfile{
+            display: flex;
+            width: 100%;
+            margin: 0;
+            padding: 0;
+            justify-content:space-between;
+            h4{
+                margin: 0;
+            }
+        }
+    }
+    .secondSectionSecondSectionProfile{
+        display: flex;
+        background-image: url("https://images.unsplash.com/photo-1556155092-8707de31f9c4?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100%;
+        height: 70%;
+    }
 }
