--- a/src/Components/Curriculums/PDFS/_pdf.scss
+++ b/src/Components/Curriculums/PDFS/_pdf.scss
@@ -1,12 +1,15 @@
 form{
     background-color: #f8f9fa;
+    border-radius: 1rem;
+    border: 1px dotted black;
+    padding: 2rem 2rem;
     display: flex;
     flex-direction: row;
     width: 90%;
     justify-content: space-around;
     flex-wrap: wrap;
+    margin: 2rem 0;
     align-items: center;
-    padding: 1rem;
     section{
         display: flex;
         flex-direction: column;
