--- a/src/Components/Curriculums/_sectionsecondcurriculums.scss
+++ b/src/Components/Curriculums/_sectionsecondcurriculums.scss
@@ -1,10 +1,14 @@
 .articleRouteCurriculums{
     height: 30rem;
+    margin: 6rem 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: #f8f9fa;
+    border-radius: 1rem;
+    border: 1px dotted black;
+    padding: 1rem 2rem;
     ul{
         li{
             margin-top: 0.75rem;
