--- a/src/Components/Login/Register/_empleador.scss
+++ b/src/Components/Login/Register/_empleador.scss
@@ -5,6 +5,8 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+    height: 38rem;
+    margin-bottom: 2rem;
     .containerCheckboxRoleEmpleador{
         display: flex;
 
@@ -13,7 +15,8 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 70%;
+        width: 50%;
+        height: 100%;
         gap: 12px;
         flex-wrap: wrap;
     }
