--- a/src/Components/Login/Register/_empleado.scss
+++ b/src/Components/Login/Register/_empleado.scss
@@ -18,22 +18,15 @@
     background-image: url('../../../assets/pexels-krakograff-textures-124842124-20560363.jpg');
     background-position: center;
     background-size: cover;
-    padding: 5.4rem;
-                    // Aplicar estilos solo cuando la pantalla es menor que 768px
-                    @media (max-width: 500px) {
-                        width: 80%;
-                    }
+
 
     .containerFormEmpleado {
-        gap: 40px;
         display: flex;
         justify-content: space-around;
         align-items: center;
         flex-direction: column;
         text-align: center;
         margin-top: 2rem;
-        width: 80%;
-
         button {
             margin-top: 1rem;
         }
@@ -42,18 +35,13 @@
             display: flex;
             flex-direction: row;
             flex-wrap: wrap;
-            width: 36%;
-
-            // Aplicar estilos solo cuando la pantalla es menor que 768px
-            @media (max-width: 500px) {
-                width: 100%;
-            }
+            justify-content: center;
         }
 
         .prueba {
             display: flex;
-            width: 100%;
             flex-direction: column;
         }
     }
+
 }
