--- a/src/Components/Login/StylesLogin/_personaldata.scss
+++ b/src/Components/Login/StylesLogin/_personaldata.scss
@@ -1,16 +1,33 @@
+@keyframes fadeIn {
+    0% {
+        opacity: 0.2;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
 .containerPrincipalPersonalData{
+    animation: fadeIn 0.4s ease-in-out;
     display: flex;
     flex-direction: column;
     justify-content: center;
     background-image: url(../../../assets/pexels-krakograff-textures-124842124-20560363.jpg);
     background-position: center;
     background-size: cover;
+    .thirdContainerPersonalData{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
     .firstArticlePersonalData{
         display: flex;
+        flex-wrap: wrap;
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        height: 28.75rem;
+        margin: 10rem 0;
     }
     .containerSectionsPersonalData{
         justify-content: center;
@@ -37,6 +54,10 @@
                 justify-content: center;
                 text-align: center;
             }
+
+            @media (max-width: 515px) {
+                width: 90%;
+              }
         }
     }
     .containerPhoneSigninPersonalData{
