sendEmail async function check

--- a/src/Components/Login/StylesLogin/_sectiononeprofile.scss
+++ b/src/Components/Login/StylesLogin/_sectiononeprofile.scss
@@ -30,6 +30,8 @@
                     padding: 0.2rem;
                     .containerUbicationAndButtonContactInformation {
                         display: flex;
+                        justify-content:flex-start;
+                        align-items: center;
                     }
                 }
                 .sectionThirdArticleConteinerInfoUserProfile {
