--- a/src/Components/Login/StylesLogin/_sectionsecondprofile.scss
+++ b/src/Components/Login/StylesLogin/_sectionsecondprofile.scss
@@ -1,34 +1,48 @@
-.sectionSecondProfile{
+.sectionSecondProfile {
     display: flex;
     flex-direction: column;
     width: 30%;
     height: 33.125rem;
     padding: 0.4rem;
-    .firstSectionSecondSectionProfile{
+    box-sizing: border-box; /* Añadido */
+    overflow: hidden; /* Para manejar desbordamientos si es necesario */
+
+    .firstSectionSecondSectionProfile {
         display: flex;
         flex-direction: column;
         width: 100%;
-        p{
+        height: 12rem;
+        padding: 1rem;
+        box-sizing: border-box; /* Añadido */
+
+        p {
             margin-bottom: 1.2rem;
+            box-sizing: border-box; /* Añadido */
         }
-        .conteinerEditLanguageProfile{
+
+        .conteinerEditLanguageProfile {
             display: flex;
             width: 100%;
             margin: 0;
             padding: 0;
-            justify-content:space-between;
-            h4{
+            justify-content: space-between;
+            box-sizing: border-box; /* Añadido */
+
+            h4 {
                 margin: 0;
+                box-sizing: border-box; /* Añadido */
             }
         }
     }
-    .secondSectionSecondSectionProfile{
-        display: flex;
-        background-image: url("https://images.unsplash.com/photo-1556155092-8707de31f9c4?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        width: 100%;
-        height: 70%;
+
+    .secondSectionSecondSectionProfile {
+        article {
+            p {
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
+                box-sizing: border-box; /* Añadido */
+            }
+        }
     }
 }
