--- a/src/Components/Courses/_coursedetails.scss
+++ b/src/Components/Courses/_coursedetails.scss
@@ -1,13 +1,7 @@
-.conteinerDetails{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    .cardDetails{
-        display: flex;
-        width: 40%;
-        border: 2px solid blue;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
+.principalConteinerCourseDetails{
+border: 1px solid red;
+.firstConteinerCourseDetails{
+    border: 1px solid blue;
+    width: 30%;
+}
 }
