--- a/src/Components/Home/_secondcontainersonhome.scss
+++ b/src/Components/Home/_secondcontainersonhome.scss
@@ -1,10 +1,10 @@
 
 
 .SecondContainerSonHome{
-    margin-top: 14rem;
     display: flex;
     width: 100%;
     justify-content: center;
+    margin: 1rem 0 0 0;
     align-items: center;
     .containerStackSecondContainerSonHome{
         display: flex;
