--- a/src/Components/Login/Register/_empleado.scss
+++ b/src/Components/Login/Register/_empleado.scss
@@ -15,18 +15,19 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    background-image: url('../../../assets/pexels-krakograff-textures-124842124-20560363.jpg');
-    background-position: center;
-    background-size: cover;
-
+    background-color: #edede9;
 
     .containerFormEmpleado {
+        background-color: white;
+        padding: 2rem;
         display: flex;
         justify-content: space-around;
         align-items: center;
         flex-direction: column;
         text-align: center;
         margin-top: 2rem;
+        width: 70%;
+        border-radius: 1rem;
         button {
             margin-top: 1rem;
         }
@@ -36,6 +37,8 @@
             flex-direction: row;
             flex-wrap: wrap;
             justify-content: center;
+            width: 70%;
+            gap: 2rem;
         }
 
         .prueba {
