--- a/src/Components/Login/StylesLogin/_personaldata.scss
+++ b/src/Components/Login/StylesLogin/_personaldata.scss
@@ -9,13 +9,12 @@
 }
 
 .containerPrincipalPersonalData{
+    background-color: #edede9;
     animation: fadeIn 0.4s ease-in-out;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-image: url(../../../assets/pexels-krakograff-textures-124842124-20560363.jpg);
-    background-position: center;
-    background-size: cover;
+    align-items: center;
     .thirdContainerPersonalData{
         display: flex;
         align-items: center;
@@ -23,23 +22,33 @@
     }
     .firstArticlePersonalData{
         display: flex;
+        padding: 0.6rem;
         flex-wrap: wrap;
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        margin: 10rem 0;
+        margin: 1.6rem 0;
+        width: 60%;
+        border: 1px solid lightgray;
+        border-radius: 1rem;
+        background-color: white;
     }
     .containerSectionsPersonalData{
         justify-content: center;
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        padding: 2.25rem;
-        gap: 2.5rem ;
+        gap: 3rem ;
+        width: 80%;
+        padding: 1rem;
+        border: 1px solid lightgray;
+        border-radius: 1rem;
+        background-color: white;
         .firstSectionPersonalData{
             display: flex;
             flex-direction: column;
             justify-content: space-around;
+            width: 40%;
             }
         .secondSectionPersonalData{
             display: flex;
