--- a/src/Components/Login/StylesLogin/_personaldata.scss
+++ b/src/Components/Login/StylesLogin/_personaldata.scss
@@ -1,78 +1,78 @@
-@keyframes fadeIn {
-    0% {
-        opacity: 0.2;
-    }
+// @keyframes fadeIn {
+//     0% {
+//         opacity: 0.2;
+//     }
 
-    100% {
-        opacity: 1;
-    }
-}
+//     100% {
+//         opacity: 1;
+//     }
+// }
 
-.containerPrincipalPersonalData{
-    background-color: #edede9;
-    animation: fadeIn 0.4s ease-in-out;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    .thirdContainerPersonalData{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-    .firstArticlePersonalData{
-        display: flex;
-        padding: 0.6rem;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        margin: 1.6rem 0;
-        width: 60%;
-        border: 1px solid lightgray;
-        border-radius: 1rem;
-        background-color: white;
-    }
-    .containerSectionsPersonalData{
-        justify-content: center;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        gap: 3rem ;
-        width: 80%;
-        padding: 1rem;
-        border: 1px solid lightgray;
-        border-radius: 1rem;
-        background-color: white;
-        .firstSectionPersonalData{
-            display: flex;
-            flex-direction: column;
-            justify-content: space-around;
-            width: 40%;
-            }
-        .secondSectionPersonalData{
-            display: flex;
-            flex-direction: column;
-            width: 50%;
+// .containerPrincipalPersonalData{
+//     background-color: #edede9;
+//     animation: fadeIn 0.4s ease-in-out;
+//     display: flex;
+//     flex-direction: column;
+//     justify-content: center;
+//     align-items: center;
+//     .thirdContainerPersonalData{
+//         display: flex;
+//         align-items: center;
+//         justify-content: center;
+//     }
+//     .firstArticlePersonalData{
+//         display: flex;
+//         padding: 0.6rem;
+//         flex-wrap: wrap;
+//         justify-content: center;
+//         align-items: center;
+//         flex-direction: column;
+//         margin: 1.6rem 0;
+//         width: 60%;
+//         border: 1px solid lightgray;
+//         border-radius: 1rem;
+//         background-color: white;
+//     }
+//     .containerSectionsPersonalData{
+//         justify-content: center;
+//         display: flex;
+//         flex-direction: row;
+//         flex-wrap: wrap;
+//         gap: 3rem ;
+//         width: 80%;
+//         padding: 1rem;
+//         border: 1px solid lightgray;
+//         border-radius: 1rem;
+//         background-color: white;
+//         .firstSectionPersonalData{
+//             display: flex;
+//             flex-direction: column;
+//             justify-content: space-around;
+//             width: 40%;
+//             }
+//         .secondSectionPersonalData{
+//             display: flex;
+//             flex-direction: column;
+//             width: 50%;
 
-            justify-content: space-around;
-            p{
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
-                text-align: center;
-            }
+//             justify-content: space-around;
+//             p{
+//                 display: flex;
+//                 flex-direction: column;
+//                 align-items: center;
+//                 justify-content: center;
+//                 text-align: center;
+//             }
 
-            @media (max-width: 515px) {
-                width: 90%;
-              }
-        }
-    }
-    .containerPhoneSigninPersonalData{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-}
+//             @media (max-width: 515px) {
+//                 width: 90%;
+//               }
+//         }
+//     }
+//     .containerPhoneSigninPersonalData{
+//         display: flex;
+//         flex-direction: column;
+//         justify-content: center;
+//         align-items: center;
+//     }
+// }
