--- a/src/Components/Sass/styles.css
+++ b/src/Components/Sass/styles.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 .containerCourses {
   display: flex;
   flex-direction: column;
@@ -80,7 +81,6 @@
   gap: 0.5em;
   display: grid;
   place-content: center;
-  font-family: "Courier New", Courier, monospace;
 }
 .containerList .card-button {
   text-decoration: none;
@@ -99,7 +99,6 @@
   opacity: 0;
   transition: 0.3s ease-out;
   cursor: pointer;
-  font-family: "Courier New", Courier, monospace;
 }
 .containerList .text-body {
   color: rgb(134, 134, 134);
@@ -196,13 +195,14 @@
   }
 }
 body {
+  font-family: 'Open Sans', sans-serif;
+  color: #031b4e !important;
   align-items: center;
   margin: 0;
   padding: 0;
   display: flex;
   flex-direction: column;
   font-size: 16px;
-  font-family: "Roboto", sans-serif;
 }
 
 .containerRouteCurriculums {
@@ -545,7 +545,6 @@ form button {
   line-height: 1.25rem;
   font-weight: 700;
   text-align: center;
-  font-family: "Montserrat", sans-serif;
   vertical-align: middle;
   align-items: center;
   border-radius: 0.5rem;
