--- a/src/Components/Landing/_landing.scss
+++ b/src/Components/Landing/_landing.scss
@@ -11,12 +11,11 @@
 .principalConteinerLanding{
     animation: fadeIn 0.3s ease-in-out;
     height: 100vh;
-    display: flex;
+background: none;    
+display: flex;
     flex-direction: column;
     justify-content:space-around;
     align-items: center;
     color: black;
-    background-image: url(../../assets/pexels-krakograff-textures-124842124-20560363.jpg);
-    background-position: center;
-    background-size: cover;
+
 }
